everything/gitops/apps/body/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: body-frontend
  namespace: body
  labels:
    app: body-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: body-frontend
  template:
    metadata:
      labels:
        app: body-frontend
    spec:
      containers:
        - name: body-frontend
          image: registry.lab.i-tems.com/body-frontend:SEED
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 60
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
