everything/gitops/apps/body/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: body-frontend
  namespace: body
  labels:
    app: body-frontend
spec:
  type: ClusterIP
  selector:
    app: body-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
