everything/gitops/apps/body/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: body-frontend
  namespace: body
spec:
  ingressClassName: traefik
  rules:
    - host: body.i-tems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: body-frontend
                port:
                  number: 80
